--- a/entidad/pom.xml
+++ b/entidad/pom.xml
@@ -42,7 +42,11 @@
     <artifactId>jaxb-api</artifactId>
     <version>2.3.1</version>
 </dependency>
-
+        <dependency>
+            <groupId>jargs</groupId>
+            <artifactId>jargs</artifactId>
+            <version>1.0</version>
+        </dependency>
     </dependencies>
 
     <properties>
